# AlphaPredict

./: .gitignore  AUDIT_ENHANCEMENT_REPORT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  run_analysis.py
artifacts/: .gitignore  README.md
config/: config.yaml  settings.yaml
data/: .gitignore
data/Processed/: README.md
notebooks/: api_submission_template.ipynb  eda.ipynb  model_development.ipynb
reports/: final_report.md
reports/figures/: README.md
scripts/: add_license_headers.py  api_stress_test.py  backtest.py  run_kaggle_pipeline.py  train.py
src/: config.py  data_loader.py  evaluation.py  models.py  preprocessing.py  serving.py  strategy.py  utils.py
src/data/: make_dataset.py
src/features/: build_features.py
tests/: __init__.py  test_config.py  test_data_loader.py  test_evaluation.py  test_models.py  test_preprocessing.py  test_serving.py  test_strategy.py  test_utils.py
